--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <center>
     <h1>Hacks to websites</h1>
     <p>wsquarepa's hack database</p>
+    <a href="/blooket.js">Source code for Blooket Hack</a> <small>(Copy and paste this into a new tampermonkey script)</small>
 </center>
