Change into github pages repo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <center>
     <h1>Hacks to websites</h1>
     <p>wsquarepa's hack database</p>
-    <a href="/blooket.js">Source code for Blooket Hack</a> <small>(Copy and paste this into a new tampermonkey script)</small>
+    <a href="https://github.com/wsquarepa/BlooketHack/raw/master/blooket.user.js">Source code for Blooket Hack</a> <small>(Copy and paste this into a new tampermonkey script)</small>
 </center>
