Change the look for the website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
-<center>
-    <h1>Hacks to websites</h1>
-    <p>wsquarepa's hack database</p>
-    <a href="https://github.com/wsquarepa/BlooketHack/raw/master/blooket.user.js">Source code for Blooket Hack</a> <small>(Copy and paste this into a new tampermonkey script)</small>
-</center>
+<head>
+    <title>WSQUAREPA | WEBSITE MODS</title>
+    <style>
+        a {
+            color: lightblue;
+        }
+
+        a:hover {
+            color: lightcoral
+        }
+
+        body {
+            background-color: #36393F;
+            color: white
+        }
+
+        .mod {
+            border-style: solid;
+            border-width: 2px;
+            border-color: white;
+            padding: 10px;
+        }
+
+        .mod:hover {
+            border-style: dashed;
+        }
+    </style>
+</head>
+<body>
+    <center>
+        <h1>Website Modifications</h1>
+        <p>Welcome to wsquarepa's website modifications page! You can download any userscript here, but you need a userscript manager like <code>Tampermonkey</code>.</p>
+        <div class="mod">
+            <a href="https://raw.githubusercontent.com/wsquarepa/website-modifications/master/blooket.user.js">Blooket Mod</a><br>
+            <p>This mod fetches the answers for a blooket set and automatically highlights the correct answer.</p>
+        </div>
+    </center>
+</body>
