Make google-style.user.js

--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
 <body>
     <center>
         <h1>Website Modifications</h1>
-        <p>Welcome to wsquarepa's website modifications page! You can download any userscript here, but you need a userscript manager like <code>Tampermonkey</code>.</p>
+        <p>Welcome to wsquarepa's website modifications page! You can download any userscript here, but you need a userscript manager like
+            <code><a href="https://www.tampermonkey.net">Tampermonkey</a></code>.</p>
         <div class="mod">
-            <a href="https://raw.githubusercontent.com/wsquarepa/website-modifications/master/blooket.user.js">Blooket Mod</a><br>
+            <a href="/blooket.user.js">Blooket Mod</a><br>
             <p>This mod fetches the answers for a blooket set and automatically highlights the correct answer.</p>
+        </div>
+        <div class="mod">
+            <a href="/google-style.user.js">Google Formatting/Styling</a>
+            <p>This mod changes the styles on Google, which makes it, in my opinion, look better. You can try it out by clicking above.</p>
         </div>
     </center>
 </body>
